--- a/index.html
+++ b/index.html
@@ -1,13 +1,105 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Milestone-01</title>
     <link rel="stylesheet" href="styles/milestone.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter&family=Lobster&family=Manrope&family=Work+Sans&display=swap"
+        rel="stylesheet">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="banner-text">
+            <p class="banner-title">All Thinks Are Possible If You believe</p>
+            <p class="banner-description">There are many variations of passages of Lorem Ipsum available, but the
+                majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <button class="primary-btn">Contact Us</button>
+        </div>
+    </header>
+
+    <main>
+        <section class="failure">
+            <div class="failure-container">
+                <img src="images/person.png" alt="">
+                <div class="failure-list">
+                    <p class="failure-title">My failures of previous year</p>
+                    <p class="failure-subtitle">Contrary to popular belief, Lorem Ipsum is not simply random text. It
+                        has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.
+                        Richard McClintock.</p>
+                    <p class="failure-description">&#x2705;Contrary to popular belief, is not simply.</p>
+                    <p class="failure-description">&#x2705;Contrary to popular belief, is not simply.</p>
+                    <p class="failure-description">&#x2705;Contrary to popular belief, is not simply.</p>
+                    <p class="failure-description">&#x2705;Contrary to popular belief, is not simply.</p>
+                    <p class="failure-description">&#x2705;Contrary to popular belief, is not simply.</p>
+                    <p class="failure-description">&#x2705;Contrary to popular belief, is not simply.</p>
+
+                </div>
+            </div>
+        </section>
+
+        <section class="My-plan">
+            <p class="section-title">My Plans</p>
+            <div class="plans-container">
+                <div class="plan">
+                    <img src="images/icons/web.png" alt="">
+                    <p class="plan-title">Web Development</p>
+                    <p class="plan-subtitle">I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/js.png" alt="">
+                    <p class="plan-title">Javascript</p>
+                    <p class="plan-subtitle">I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/smoke.png" alt="">
+                    <p class="plan-title">Smoking Habit</p>
+                    <p class="plan-subtitle">I want to start</p>
+                </div>
+                <div class="plan">
+                    <img src="images/icons/ecom.png" alt="">
+                    <p class="plan-title">e commerce</p>
+                    <p class="plan-subtitle">I want to start</p>
+                </div>
+            </div>
+
+        </section>
+        <section class="img">
+            <div class="background">
+                <p class="background-title">Awlays keep a positive mindset</p>
+                <button class="img-btn">Call now</button>
+
+
+            </div>
+        </section>
+        <footer class="future">
+            <div class="future-container">
+                <div class="future-item">
+                    <p class="footer-title">Future</p>
+                    <p class="footer-subtitle">There are many variations of passages of Lorem Ipsum available, but the
+                        majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                        <p class="info">Email : info@gmail.com</p>
+                        <p class="info-two">Phone : 01500 00 00 00</p>
+                        <a href=""><img src="images/icons/fb.png" alt=""></a>
+                        <a href=""><img src="images/icons/twitter.png" alt=""></a>
+                        <a href=""><img src="images/icons/youtube.png" alt=""></a>
+                </div>
+                <div class="future-item-two">
+                    <p class="item-two-title">Subscribe</p>
+                    <input type="email" name="" id="" placeholder="Enter Your Email">
+                    <button class="footer-btn">Subscribe</button>
+
+
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
+
 </html>
